syntax = "proto3";

package ij.qsync;

// option java_api_version = 2;
option java_outer_classname = "Query";
option java_package = "com.google.idea.blaze.qsync.query";

/**
 * Contains a summary of a {@code query} command output as needed by querysync.
 */
message Summary {
  reserved 1; // old source_files to be discarded.
  reserved 2; // old rules to be discarded.
  int32 version = 3;
  repeated string packages_with_errors = 4;
  StringStorage string_storage = 5;
  reserved 6; // old stored_rules to be discarded.

  enum QueryStrategy {
    QUERY_STRATEGY_UNKNOWN = 0;
    QUERY_STRATEGY_PLAIN = 1;
    QUERY_STRATEGY_FILTERING_TO_KNOWN_AND_USED_TARGETS = 2;
    QUERY_STRATEGY_PLAIN_WITH_SAFE_FILTERS = 3;
  }
  QueryStrategy query_strategy = 7;

  repeated StoredRule stored_rules = 8;
  repeated StoredSourceFile source_files = 9;
}

/**
 * Stores strings that are used in other messages by indexing into indexed_strings field of this message.
 */
message StringStorage {
  // Ordered list of unique strings used in other messages as indexes into this list.
  repeated string indexed_strings = 1;
}

message StoredLabel {
  int32 workspace = 1;
  int32 buildPackage = 2;
  int32 name = 3;
}

message StoredSourceFile {
  StoredLabel label = 1;
  // Subincludes of a source file, taken from blaze_query.SourceFile.subinclude
  repeated StoredLabel subinclude = 2;
}

message StoredRule {
  StoredLabel label = 1;
  int32 rule_class = 2;
  repeated StoredLabel sources = 3;
  repeated StoredLabel deps = 4;
  repeated StoredLabel idl_sources = 5;
  repeated StoredLabel runtime_deps = 6;
  repeated StoredLabel resource_files = 7;
  StoredLabel manifest = 8;
  int32 test_app = 9;
  int32 instruments = 10;
  int32 custom_package = 11;
  repeated StoredLabel hdrs = 12;
  repeated int32 copts = 13;
  repeated int32 tags = 14;
  int32 main_class = 15;
}
